# Technosphere-Cpp-course

./: README.md
task1/: CMakeLists.txt  README.md
task1/lib/process/: CMakeLists.txt
task1/lib/process/include/: process.hpp
task1/lib/process/src/: process.cpp
task1/libs/: CMakeLists.txt
task1/libs/process/: CMakeLists.txt
task1/libs/process/include/: process.hpp
task1/libs/process/src/: process.cpp
task1/src/: main.cpp
task2/: CMakeLists.txt  README.md
task2/libs/: CMakeLists.txt
task2/libs/LoggerLib/: CMakeLists.txt
task2/libs/LoggerLib/include/: LoggerLib.hpp
task2/libs/LoggerLib/src/: LoggerLib.cpp
task2/src/: main.cpp
task3/: CMakeLists.txt  README.md
task3/libs/: CMakeLists.txt
task3/libs/TCPLib/: CMakeLists.txt
task3/libs/TCPLib/include/: Connection.hpp  Descriptor.hpp  Server.hpp  tcp_except.hpp
task3/libs/TCPLib/src/: Connection.cpp  (+3 more)
task3/src/: main.cpp
task4/: CMakeLists.txt  README.md
task4/libs/: CMakeLists.txt
task4/libs/shmem/: CMakeLists.txt
task4/src/: main.cpp
task5/: CMakeLists.txt  README.md
task5/libs/: CMakeLists.txt
task5/libs/netLib/: CMakeLists.txt
task5/src/: main.cpp
task6/: CMakeLists.txt  README.md
task6/libs/: CMakeLists.txt
task6/libs/descriptor/: CMakeLists.txt
task6/libs/httpLib/: CMakeLists.txt
task6/libs/netLib/: CMakeLists.txt
task6/libs/netLib/include/: BufferedConnection.hpp  Connection.hpp  EPoll.hpp  ErrnoExcept.hpp  Server.hpp  Service.hpp
task6/libs/netLib/src/: BufferedConnection.cpp  EPoll.cpp  ErrnoExcept.cpp  Server.cpp  Service.cpp
task6/src/: main.cpp
(+23 files in other folders)
